Update URLs for wlfogle GitHub account

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "SM-N960U1 Android 12+ Guide"
 description: "Complete guide to install Android 12+ on Samsung Galaxy Note 9 US Unlocked"
 baseurl: "" 
-url: "https://yourusername.github.io/note9-n960u1-android12"
+url: "https://wlfogle.github.io/note9-n960u1-android12"
 author: "SM-N960U1 Community"
 
 # GitHub Pages settings
